--- a/coursework/Dockerfile
+++ b/coursework/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.7
-LABEL maintainer="artemzraev@gmail.com"
+LABEL maintainer="glvv232@mail.ru"
 COPY . /app
 WORKDIR /app
 RUN pip install -r requirements.txt
