--- a/coursework/requirements.txt
+++ b/coursework/requirements.txt
@@ -1,5 +1,10 @@
+click==8.0.1
 dill==0.3.3
+Flask==2.0.1
+itsdangerous==2.0.1
+Jinja2==3.0.1
 joblib==1.0.1
+MarkupSafe==2.0.1
 numpy==1.20.3
 pandas==1.2.4
 python-dateutil==2.8.1
@@ -9,3 +14,4 @@ scipy==1.6.3
 six==1.16.0
 sklearn==0.0
 threadpoolctl==2.1.0
+Werkzeug==2.0.1
